--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,21 @@
-
 {
   "name": "LPG Converter",
   "short_name": "LPG",
+  "description": "Convertitore tonnellate/barili per propano, butano e media ponderata",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff",
-  "icons": []
+  "theme_color": "#bbbbbb",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
